--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,16 @@
-name: Module-Install-RTx
-version: 0.11
+--- 
 abstract: RT extension installer
-license: perl
 distribution_type: module
-requires:
-  Module::Install::Admin: 0.29
-no_index:
-  directory:
+generated_by: Module::Install version 0.67
+license: perl
+meta-spec: 
+  url: http://module-build.sourceforge.net/META-spec-v1.3.html
+  version: 1.3
+name: Module-Install-RTx
+no_index: 
+  directory: 
     - inc
-generated_by: Module::Install version 0.36
+    - t
+requires: 
+  Module::Install::Admin: 0.29
+version: 0.20
