--- a/META.yml
+++ b/META.yml
@@ -1,8 +1,9 @@
 --- 
 abstract: RT extension installer
+author: Audrey Tang <cpan@audreyt.org>
 distribution_type: module
 generated_by: Module::Install version 0.67
-license: perl
+license: mit
 meta-spec: 
   url: http://module-build.sourceforge.net/META-spec-v1.3.html
   version: 1.3
@@ -11,6 +12,13 @@ no_index:
   directory: 
     - inc
     - t
+provides: 
+  Module::Install::RTx: 
+    file: lib/Module/Install/RTx.pm
+    version: 0.21
+  Module::Install::RTx::Factory: 
+    file: lib/Module/Install/RTx/Factory.pm
 requires: 
-  Module::Install::Admin: 0.29
-version: 0.20
+  Module::Install::Admin: 0.4
+  perl: 5.8.0
+version: 0.21
