--- a/META.yml
+++ b/META.yml
@@ -21,12 +21,12 @@ no_index:
 provides:
   Module::Install::RTx:
     file: lib/Module/Install/RTx.pm
-    version: 0.34
-  Module::Install::RTx::Factory:
-    file: lib/Module/Install/RTx/Factory.pm
+    version: 0.34_03
+  Module::Install::RTx::Runtime:
+    file: lib/Module/Install/RTx/Runtime.pm
 requires:
   Module::Install::Admin: 0.4
   perl: 5.8.0
 resources:
   license: http://opensource.org/licenses/mit-license.php
-version: 0.34
+version: 0.34_03
